--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,7 @@ body {
 }
 
 a {
-  color: #d5000d;
+  color: #00d5c8;
 }
 a:hover {
   color: #c5000c;
@@ -255,7 +255,7 @@ h3 {
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
-  color: #d5000d;
+  color: #00d5c8;
 }
 
 h4 {
@@ -312,9 +312,9 @@ dl dt {
 
 footer {
   padding-top: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   margin-top: 40px;
-  font-size: 13px;
+  font-size: 8px;
   color: #aaa;
   background: transparent url('../images/hr.png') 0 0 no-repeat;
 }
