--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,7 @@ body {
 }
 
 a {
-  color: #00d5c8;
+  color: #00a298;
 }
 a:hover {
   color: #c5000c;
@@ -255,7 +255,7 @@ h3 {
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
-  color: #00d5c8;
+  color: #00a298;
 }
 
 h4 {
@@ -323,7 +323,7 @@ footer a {
   color: #666;
 }
 footer a:hover {
-  color: #444;
+  color: #666;
 }
 
 /* MISC */
